# generativeDL

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
cifar/: data.py  metaflow_cifar.py  models.py  train.py  train_cifar.ipynb  train_cifar.py  trainer.py  utils.py
cifar/models/: __init__.py  densenet.py  inception.py  resnet.py
generativedl/models/: vae.py
generativedl/models/autoregressive/: ar.py  made.py  pixelcnn.py
generativedl/models/latent/: vae.py  vae_2d.py  vlae.py
mnist/: data.py  trainer.py
mnist/models/: convnet.py  sampler.py
ng-video-lecture-master/: gpu.py
train_classification/: data.py  train_cifar.py  trainer.py
train_classification/models/: activation_functions.py
train_gen/: data.py  train_mnist.py  trainer.py
training/autoencoder/: data.py  train_autoencoder.py  train_mnist.py  trainer.py  utils.py
training/autoencoder/models/: convnet.py
training/autoregressive/: data.py  flow_ar.py  train_ar.py  trainer.py  utils.py
training/autoregressive/models/: __init__.py  masked.py  pixelcnn.py  residual.py
training/classification/: data.py  train_classification.py  trainer.py
training/classification/models/: __init__.py  convnet.py  vision_transformer.py
training/energy/: data.py  trainer.py
training/normalizing_flows/: data.py  train_nf.py  trainer.py  utils.py
training/normalizing_flows/models/: cnn.py  couplinglayer.py  dequantization.py  flows.py
training/simclr/: data.py  train_simclr.py  trainer.py  utils.py
training/simclr/models/: decoder.py  encoder.py
uvadlc_notebooks-master/docs/tutorial_notebooks/tutorial5/: recreate.ipynb
