[tool.poetry]
name = "generativedl"
version = "0.1.0"
description = ""
authors = ["huyqd <quanghuy.dang210@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.0"
torchvision = "^0.17.0"
torchaudio = "^2.2.0"
lightning = "^2.1.4"
seaborn = "^0.13.2"
matplotlib = "^3.8.2"
plotly = "^5.18.0"
jupyter = "^1.0.0"
ruff = "^0.2.1"

[tool.poetry.dev-dependencies]

[tool.ruff]
line-length = 120
target-version = "py311"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
