[tool.poetry]
name = "generativedl"
version = "0.1.0"
description = ""
authors = ["huyqd <quanghuy.dang210@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.0"
torchaudio = "^2.3.0"
torchvision = "^0.18.0"
lightning = "^2.1.4"
metaflow = "^2.11.2"
wandb = "^0.16.4"
tiktoken = "^0.6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.8.2"
plotly = "^5.18.0"
jupyter = "^1.0.0"
pre-commit = "^3.6.1"

[tool.ruff]
line-length = 120
target-version = "py310"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
